--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,34 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/bin/
+
+.gradle
+build/
+
+gradle-app.settings
+
+!gradle-wrapper.jar
+
+.gradletasknamecache
+
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+src/main/resources/rebel.xml
+.externalToolBuilders
+*.launch
+.cproject
+.buildpath
+
